--- a/src/components/RightColumn/RightColumn.css
+++ b/src/components/RightColumn/RightColumn.css
@@ -1,11 +1,6 @@
 @media only screen and (min-width: 1300px) {
   .right-column-container {
     float: right;
-  }
-}
-
-@media only screen and (min-width: 1300px) {
-  .right-column {
-    margin-bottom: 5px;
+    width: 40%;
   }
 }
