--- a/src/components/transactions/TransactionsList/TransactionsList.css
+++ b/src/components/transactions/TransactionsList/TransactionsList.css
@@ -5,7 +5,7 @@
 
 @media only screen and (min-width: 1300px) {
   .transactions-list-container {
-    width: 64%;
+    width: 59.7%;
     float: left;
     margin-bottom: 10px;
   }
